# reddit-configurable-reply-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  authenticate.py  authentication.json.example  behaviour.lua  run.py  run.sh  script.py  script.txt  silentAutoRunWindows.bat  subreddits.json  template_config.py  weekly-topics.lua
behaviour/: README.md  comment-reply.lua  weekly-topics.lua
src/: configuration.rs  db.rs  lib.rs  main.rs  reddit.rs
