[package]
name = "sexuality-def-bot"
version = "0.1.0"
authors = ["Skeletonxf <skeletonxf@gmail.com>"]

[dependencies]
# reddit api
# need unreleased patch that makes newlines work on reddit
# https://github.com/Aurora0001/rawr/commit/34bc914cc6a9fe001ebab7b90a9c396e8a36b2ba
rawr = { git = 'https://github.com/Aurora0001/rawr' }
# sqlite db
rusqlite = "0.13.0"
# json parsing
json = "0.11.13"
# lua scripting
rlua = "0.12.0"
# converting to std::error::Error types for rlua
failure = "0.1.1"

# Non essential utilities for the lua script
# regex parsing
regex = "0.2"
